testdata/golden/hir_borrow/invalid/mut_borrow_excludes_other.sg
fn t() {
    let mut x: int = 1;
    let m: &mut int = &mut x;
    let r: &int = &x;
}

